# KDE-SPLASH-CREATOR

./: CMakeLists.txt  README.md  add_animatedimage_dialog.cpp  add_animatedimage_dialog.h  add_animatedimage_dialog.ui  add_image_dialog.cpp  add_image_dialog.h  add_image_dialog.ui  add_text_dialog.h  add_text_dialog.ui  background_dialog.cpp  background_dialog.h  background_dialog.ui  global_vars.cpp  global_vars.h  mainwindow.cpp  metadata_dialog.cpp  metadata_dialog.h  metadata_dialog.ui  splash_metadata.h
dialogs/headers/: add_animatedimage_dialog.h  add_background_dialog.h  add_image_dialog.h  add_metadata_dialog.h  mainwindow.h
dialogs/sources/: add_animatedimage_dialog.cpp  add_background_dialog.cpp  add_image_dialog.cpp  add_metadata_dialog.cpp  add_text_dialog.cpp  mainwindow.cpp
dialogs/ui/: add_animatedimage_dialog.ui  add_background_dialog.ui  add_image_dialog.ui  add_metadata_dialog.ui  mainwindow.ui
libs/: global_vars.h  splash_metadata_class.h  splash_qml_class.h
